Update project branding from "Aureanne Review Tracker" to "Boresha". Modify package.json, index.html, and various components to reflect the new name. Enhance SEO metadata across pages for improved visibility. Update footer and header components to align with the new branding.

--- a/reviews/public/index.html
+++ b/reviews/public/index.html
@@ -7,11 +7,8 @@
     <meta name="theme-color" content="#0071e3" />
 
     <!-- Primary Meta Tags -->
-    <title>Aureanne Review Tracker - Manage & Analyze Customer Reviews</title>
-    <meta
-      name="title"
-      content="Aureanne Review Tracker - Manage & Analyze Customer Reviews"
-    />
+    <title>Boresha - Manage & Analyze Customer Reviews</title>
+    <meta name="title" content="Boresha - Manage & Analyze Customer Reviews" />
     <meta
       name="description"
       content="Comprehensive review management and analytics platform. Track reviews from Google, Yelp, Facebook, and more. Get sentiment analysis, keyword insights, and actionable feedback."
@@ -20,15 +17,15 @@
       name="keywords"
       content="review management, customer reviews, review analytics, sentiment analysis, business reviews, review tracking, customer feedback"
     />
-    <meta name="author" content="Aureanne" />
+    <meta name="author" content="Boresha" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://aureanne.com/" />
+    <meta property="og:url" content="https://boresha.com/" />
     <meta
       property="og:title"
-      content="Aureanne Review Tracker - Manage & Analyze Customer Reviews"
+      content="Boresha - Manage & Analyze Customer Reviews"
     />
     <meta
       property="og:description"
@@ -38,10 +35,10 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://aureanne.com/" />
+    <meta property="twitter:url" content="https://boresha.com/" />
     <meta
       property="twitter:title"
-      content="Aureanne Review Tracker - Manage & Analyze Customer Reviews"
+      content="Boresha - Manage & Analyze Customer Reviews"
     />
     <meta
       property="twitter:description"
@@ -51,7 +48,7 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="canonical" href="https://aureanne.com/" />
+    <link rel="canonical" href="https://boresha.com/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
