Enhance Facebook SDK integration by adding support for HTTP development and improving security checks. Update Facebook permissions in configuration to streamline access. This ensures a smoother login experience while adhering to security protocols.

--- a/reviews/public/index.html
+++ b/reviews/public/index.html
@@ -58,6 +58,9 @@
           cookie: true,
           xfbml: true,
           version: "v18.0",
+          status: true,
+          // Allow both HTTP and HTTPS for development
+          oauth: true,
         });
       };
 
