Add Google Maps API integration and update dependencies for location features
- Added Google Maps API script to index.html for enhanced location functionality.
- Introduced @types/google.maps as a development dependency for TypeScript support.
- Refactored AddLocation component to implement Google Places Autocomplete, improving address input experience.
- Updated UserContext to remove unnecessary useSupabase hook, streamlining user session management.
- Enhanced CompanyPage to include location component with refreshed reviews data.

This update significantly improves location handling and user experience in the application.

--- a/reviews/public/index.html
+++ b/reviews/public/index.html
@@ -74,6 +74,13 @@
         fjs.parentNode.insertBefore(js, fjs);
       })(document, "script", "facebook-jssdk");
     </script>
+
+    <!-- Google Maps API -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCx8q2-5ztalGc3QvcaQTjVvf7uLjVp7zw&libraries=places&loading=async"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
