Update Email Digest Settings and Localization
- Updated the email digest settings in the Companies component to include options for enabling weekly and monthly digest emails.
- Enhanced the CompanyHeader component to manage these new settings, improving user control over email notifications.
- Added localization strings for email digest settings in both English and French, ensuring a consistent user experience across languages.
- Implemented new email notification logging functionality in the Supabase migrations, allowing for better tracking of email execution attempts.

This update strengthens the email notification system by providing users with more control over their preferences and improving the overall management of email communications.

--- a/reviews/public/index.html
+++ b/reviews/public/index.html
@@ -22,7 +22,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://boresha.com/" />
+    <meta property="og:url" content="https://boresha.ca/" />
     <meta
       property="og:title"
       content="Boresha - Manage & Analyze Customer Reviews"
@@ -35,7 +35,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://boresha.com/" />
+    <meta property="twitter:url" content="https://boresha.ca/" />
     <meta
       property="twitter:title"
       content="Boresha - Manage & Analyze Customer Reviews"
@@ -48,7 +48,7 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="canonical" href="https://boresha.com/" />
+    <link rel="canonical" href="https://boresha.ca/" />
 
     <!-- Facebook SDK -->
     <script>
